# Trabajos_ThalesAlenia

./: CMakeLists.txt  carcasa_mdm31.cpp  deutsch.cpp  escuadra_subd15.cpp  soporte_tarjeta.cpp
stl/: carcasa_mdm31.stl  topefee.stl
